ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncDeclare_es6/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncDeclare_es6/input.ts:3:9
  |
3 | declare async function foo(): Promise<void>;
  |         ^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncDeclare_es6/input.ts:3:1
  |
3 | declare async function foo(): Promise<void>;
  | ^^^^^^^

